--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,55 @@
-* {
+body {
 	font-family: 'Lato', sans-serif;
+	border: none;
+	background-color: #c0c0c0;
+}
+header img {
+	width: 100px;
+	text-align: left;
+}
+header h1 {
+	font-size: 54px;
+	font-weight: 900;
+	text-align: right;
+	text-transform: uppercase;
+}
+h1 span {
+	display: block;
+	font-size: 20px;
+}
+header .row {
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom: 3px solid #d5245b;
+}
+.toplist {
+	background-color: #131a2d;
+	color: #d0c4ab;
+	padding-bottom: 10px;
+}
+.jumbotron {
+	padding-top: 10px;
+}
+.jumbotron img {
+	width: 960px;
+}
+.jumbotron h3,
+ p {
+	padding-left: 2px;
+}
+h3 {
+	font-size: 34px;
+}
+h2 {
+	font-size: 44px;
+}
+.col-4 {
+	text-align: center;
+}
+a {
+	text-decoration: none;
+	color: #d5245b;
+}
+a:hover {
+	color: #d0c4ab;
 }
