--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,7 @@ h1 span {
 	font-size: 20px;
 }
 header .row {
+	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
 	border-bottom: 3px solid #d5245b;
